/comment/{commentId} patch and delete added to swagger
